--- a/src/cancer_detection.ipynb
+++ b/src/cancer_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,78 +40,12 @@
     "        rgb_img = img.reshape((img.shape[0] * img.shape[1], 3))\n",
     "        list_img.append(rgb_img)\n",
     "        \n",
-    "    return list_img\n",
-    "\n",
-    "def bwarea(img):\n",
-    "    row = img.shape[0]\n",
-    "    col = img.shape[1]\n",
-    "    total = 0.0\n",
-    "    for r in range(row-1):\n",
-    "        for c in range(col-1):\n",
-    "            sub_total = img[r:r+2, c:c+2].mean()\n",
-    "            if sub_total == 255:\n",
-    "                total += 1\n",
-    "            elif sub_total == (255.0/3.0):\n",
-    "                total += (7.0/8.0)\n",
-    "            elif sub_total == (255.0/4.0):\n",
-    "                total += 0.25\n",
-    "            elif sub_total == 0:\n",
-    "                total += 0\n",
-    "            else:\n",
-    "                r1c1 = img[r,c]\n",
-    "                r1c2 = img[r,c+1]\n",
-    "                r2c1 = img[r+1,c]\n",
-    "                r2c2 = img[r+1,c+1]\n",
-    "                \n",
-    "                if (((r1c1 == r2c2) & (r1c2 == r2c1)) & (r1c1 != r2c1)):\n",
-    "                    total += 0.75\n",
-    "                else:\n",
-    "                    total += 0.5\n",
-    "    return total\n",
-    "            \n",
-    "def imclearborder(imgBW):\n",
-    "\n",
-    "    # Given a black and white image, first find all of its contours\n",
-    "    radius = 2\n",
-    "    imgBWcopy = imgBW.copy()\n",
-    "    contours,hierarchy = cv2.findContours(imgBWcopy.copy(), cv2.RETR_LIST, \n",
-    "        cv2.CHAIN_APPROX_SIMPLE)\n",
-    "\n",
-    "    # Get dimensions of image\n",
-    "    imgRows = imgBW.shape[0]\n",
-    "    imgCols = imgBW.shape[1]    \n",
-    "\n",
-    "    contourList = [] # ID list of contours that touch the border\n",
-    "\n",
-    "    # For each contour...\n",
-    "    for idx in np.arange(len(contours)):\n",
-    "        # Get the i'th contour\n",
-    "        cnt = contours[idx]\n",
-    "\n",
-    "        # Look at each point in the contour\n",
-    "        for pt in cnt:\n",
-    "            rowCnt = pt[0][1]\n",
-    "            colCnt = pt[0][0]\n",
-    "\n",
-    "            # If this is within the radius of the border\n",
-    "            # this contour goes bye bye!\n",
-    "            check1 = (rowCnt >= 0 and rowCnt < radius) or (rowCnt >= imgRows-1-radius and rowCnt < imgRows)\n",
-    "            check2 = (colCnt >= 0 and colCnt < radius) or (colCnt >= imgCols-1-radius and colCnt < imgCols)\n",
-    "\n",
-    "            if check1 or check2:\n",
-    "                contourList.append(idx)\n",
-    "                break\n",
-    "\n",
-    "    for idx in contourList:\n",
-    "        cv2.drawContours(imgBWcopy, contours, idx, (0,0,0), -1)\n",
-    "\n",
-    "    return imgBWcopy\n",
-    "\n"
+    "    return list_img\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -141,45 +75,27 @@
      "text": [
       "Image 1\n",
       "Fuzzy time for cluster 4\n",
-      "1.3609592914581299 seconds\n",
-      "Bwarea : 127.75\n",
-      "\n",
+      "1.3923192024230957 seconds\n",
       "Fuzzy time for cluster 5\n",
-      "2.173851490020752 seconds\n",
-      "Bwarea : 127.75\n",
-      "\n",
+      "2.1046717166900635 seconds\n",
       "Fuzzy time for cluster 6\n",
-      "2.929086685180664 seconds\n",
-      "Bwarea : 127.75\n",
-      "\n",
+      "2.827436685562134 seconds\n",
       "\n",
       "Image 2\n",
       "Fuzzy time for cluster 4\n",
-      "1.0048458576202393 seconds\n",
-      "Bwarea : 127.75\n",
-      "\n",
+      "0.9741246700286865 seconds\n",
       "Fuzzy time for cluster 5\n",
-      "1.6748900413513184 seconds\n",
-      "Bwarea : 127.75\n",
-      "\n",
+      "1.5362603664398193 seconds\n",
       "Fuzzy time for cluster 6\n",
-      "4.796985626220703 seconds\n",
-      "Bwarea : 127.75\n",
-      "\n",
+      "4.750378608703613 seconds\n",
       "\n",
       "Image 3\n",
       "Fuzzy time for cluster 4\n",
-      "2.1373143196105957 seconds\n",
-      "Bwarea : 127.75\n",
-      "\n",
+      "2.2405896186828613 seconds\n",
       "Fuzzy time for cluster 5\n",
-      "2.3360671997070312 seconds\n",
-      "Bwarea : 127.75\n",
-      "\n",
+      "2.407200813293457 seconds\n",
       "Fuzzy time for cluster 6\n",
-      "3.542832851409912 seconds\n",
-      "Bwarea : 127.75\n",
-      "\n",
+      "3.4894661903381348 seconds\n",
       "\n"
      ]
     },
@@ -256,15 +172,9 @@
     "        print('Fuzzy time for cluster',cluster)\n",
     "        print(time() - new_time,'seconds')\n",
     "        seg_img_1d = seg_img[:,:,1]\n",
-    "        \n",
-    "        \n",
-    "        bwfim = imclearborder(seg_img_1d)\n",
-    "        \n",
-    "        print('Bwarea : '+str(bwarea(bwfim3)))\n",
-    "        print()\n",
     "\n",
     "        plt.subplot(1,4,i+2)\n",
-    "        plt.imshow(bwfim)\n",
+    "        plt.imshow(seg_img_1d)\n",
     "        name = 'Cluster'+str(cluster)\n",
     "        plt.title(name)\n",
     "\n",
