--- a/tex/fuzzy_clustering.tex
+++ b/tex/fuzzy_clustering.tex
@@ -173,7 +173,7 @@ Rezultati na\v{s}eg algoritma na nekim rendgenskim snimcima tumora:
 
 \section{\fontencoding{OT2}\selectfont Zaklju\v{c}ak}
 
-Klasterovanje je jedan od najkori\v{s}\'{c}enijih na\v{c}ina za segmentaciju slika. Ogromna prednost {\fontencoding{T1}\selectfont fuzzy} klasterovanja u odnosu na ostale tehnike segmentacije slika je to \v{s}to je vrlo otporan na nepravilne granice. Tokom rada koristili smo vi\v{s}e razli\v{c}itih slika koje smo segmentovali uz isprobavanje razli\v{c}itih vrednosti odre\dj enih parametara i razli\v{c}itog broja klastera i u ve\'{c}ini slu\v{c}ajeva najbolje se pokazalo kori\v{s}\'{c}enje 5 klastera uz parametar {\fontencoding{T1}\selectfont fuzzy} formule ($p$) koji je jednak 2. Segmentacija slika uz pomo\'{c} algoritama {\fontencoding{T1}\selectfont fuzzy} klasterovanja je svoju primenu izme\dj u ostalog na\v{s}la u medicini gde je veoma bitna preciznost rezultata. Naravno, {\fontencoding{T1}\selectfont fuzzy} klasterovanje ima \v{s}irok spektar primene pored segmentacije slika u raznim drugim oblastima neke od njih su ekonomija, geografija i druge.
+Klasterovanje je jedan od najkori\v{s}\'{c}enijih na\v{c}ina za segmentaciju slika. Ogromna prednost {\fontencoding{T1}\selectfont fuzzy} klasterovanja u odnosu na ostale tehnike segmentacije slika je to \v{s}to je vrlo otporan na nepravilne granice. Tokom rada koristili smo vi\v{s}e razli\v{c}itih slika koje smo segmentovali uz isprobavanje razli\v{c}itih vrednosti odre\dj enih parametara i razli\v{c}itog broja klastera i u ve\'{c}ini slu\v{c}ajeva najbolje se pokazalo kori\v{s}\'{c}enje 5 klastera uz parametar {\fontencoding{T1}\selectfont fuzzy} formule ($p$) koji je jednak 2. Segmentacija slika uz pomo\'{c} algoritama {\fontencoding{T1}\selectfont fuzzy} klasterovanja je svoju primenu izme\dj u ostalog na\v{s}la u medicini gde je veoma bitna preciznost rezultata. Naravno, {\fontencoding{T1}\selectfont fuzzy} klasterovanje ima \v{s}irok spektar primene pored segmentacije slika u raznim drugim oblastima neke od njih su ekonomija, ve\v{s}ta\v{c}ka inteligencija i druge.
 
 \newpage
 \section{\fontencoding{OT2}\selectfont Literatura}
