Ispravljene slovne greske

--- a/tex/fuzzy_clustering.tex
+++ b/tex/fuzzy_clustering.tex
@@ -87,7 +87,7 @@ Kod klasi\v{c}nog klasterovanja, podaci su podeljeni u odre\dj en broj disjunktn
 
 Postoje mnogobrojne metode i raznovrsna literatura za izdvajanje informacija sa slike i njenu podelu na razli\v{c}ite regione. Svaka od tih metoda susre\'{c}e se sa odre\dj enim ograni\v{c}enjima koja se ogledaju u vremenskoj slo\v{z}enosti ili ta\v{c}nosti. Razlog za to je \v{s}to ne postoje jasne granice izme\dj u objekata na slici. Fazi klasterovanje pokazalo se kao veoma dobar na\v{c}in za prevazila\v{z}enje ovog problema.
 
-Segmentacija slika kori\v{s}\'{c}enjem fazi klasterovanja bila je predmet velikog interesovanja kroz godine. Neki od algoritama koji se bave ovom temom su: Fazi c-sredina, Gustafon-Kese, Gausova razgradnja sme\v{s}e, Fazi c-sorte, Fazi c-prstenovi,  Prilagodljive fazi c-sorte, Fazi c-omota\v{c}i, Fazi c-sferni omota\v{c}i,  Fazi c-pravougaoni omota\v{c}i (eng. {\fontencoding{T1}\selectfont Fuzzy C-Means (FCM), Gustafson-Kesse (GK), Gaussian Mixture Decomposition (GMD), Fuzzy C-Varieties (FCV), Adaptive Fuzzy C-varieties (AFC), Fuzzy C-Shell (FCS), Fuzzy C-Spherical Shells (FCSS), Fuzzy C-Rings, Fuzzy C-Quadric Shells (FCQS), Fuzzy C- Rectangular Shells (FCRS)} i drugi. Me\dj u svim gore navedenim algoritmima, metod fazi c-sredina je najprihva\'{c}eniji na\v{c}in za segmentaciju slika jer omogu\'{c}ava manji gubitak informacija u odnosu na algoritme klasi\v{c}nog klasterovanja.
+Segmentacija slika kori\v{s}\'{c}enjem fazi klasterovanja bila je predmet velikog interesovanja kroz godine. Neki od algoritama koji se bave ovom temom su: Fazi c-sredina, Gustafon-Kese, Gausova razgradnja sme\v{s}e, Fazi c-sorte, Fazi c-prstenovi,  Prilagodljive fazi c-sorte, Fazi c-omota\v{c}i, Fazi c-sferni omota\v{c}i,  Fazi c-pravougaoni omota\v{c}i (eng. {\fontencoding{T1}\selectfont Fuzzy C-Means (FCM), Gustafson-Kesse (GK), Gaussian Mixture Decomposition (GMD), Fuzzy C-Varieties (FCV), Adaptive Fuzzy C-varieties (AFC), Fuzzy C-Shell (FCS), Fuzzy C-Spherical Shells (FCSS), Fuzzy C-Rings, Fuzzy C-Quadric Shells (FCQS), Fuzzy C- Rectangular Shells (FCRS)}) i drugi. Me\dj u svim gore navedenim algoritmima, metod fazi c-sredina je najprihva\'{c}eniji na\v{c}in za segmentaciju slika jer omogu\'{c}ava manji gubitak informacija u odnosu na algoritme klasi\v{c}nog klasterovanja.
 
 U nastavku \'{c}emo prikazati segmentaciju slika kori\v{s}\'{c}enjem algoritama k-sredina (eng. {\fontencoding{T1}\selectfont k-means}) i fazi c-sredina (eng. {\fontencoding{T1}\selectfont fuzzy c-means}).
 
